--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,123 @@
-body {
-    font-family: sans-serif;
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+.checkbox {
+    width: 30px;
+    height: 30px;
+    background-color: #f1f1f1;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 1s;
+}
+
+.deleteButton {
+    background-color: #394e92;
+    border: solid;
+    color: black;
+    padding-bottom: 27px;
+    padding-right: 5px;
+    height: 5px;
+    width: 30px;
+    padding-left: 5px;
+    margin-right: 10px;
+    margin-bottom: 7px;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+    transition: background-color 1s;
+}
+
+.deleteButton:hover {
+    background-color: #6062d1;
+}
+
+input {
+    width: 100px;
+    height: 30px;
+    font-size: 15px;
+    border: solid;
+    padding-left: 6px;
+}
+
+
+#dataButtons{
+    display: flex;
+    margin-top: 10px;
+    flex-direction: row;
+}
+
+#addButton{
+    background-color: #85b997;
+    border: solid;
+    border-radius: 10px;
+    color: black;
+    padding-bottom: 27px;
+    padding-right: 5px;
+    height: 30px;
+    width: 50px;
+    margin-bottom: 15px;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+    transition: background-color 1s;
+}
+
+#addButton:hover{
+    background-color: #a3d1b3;
+}
+
+#saveButton{
+    background-color: #c54444;
+    border: solid;
+    border-radius: 10px;
+    height: 30px;
+    width: 50px;
+    margin: 0px 2px;
+    margin-top: 15px;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 1s;
+}
+
+#saveButton:hover{
+    background-color: #fa6060;
+}
+
+#loadButton{
+    background-color: #c5a744;
+    border: solid;
+    border-radius: 10px;
+    height: 30px;
+    width: 50px;
+    margin: 0px 2px;
+    margin-top: 15px;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 1s;
+}
+
+#loadButton:hover{
+    background-color: #f0c260;
+}
+
+#clearButton{
+    background-color: #444dc5;
+    border: solid;
+    border-radius: 10px;
+    height: 30px;
+    width: 50px;
+    margin: 0px 2px;
+    margin-top: 15px;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 1s;
+}
+
+#clearButton:hover{
+    background-color: #6069fa;
 }
